Update hungarian translation.

--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -2,6 +2,9 @@
 <resources>
   <string name="app_desc">Egyszerű, hatékony, nyílt-forráskódú SSH kliens.</string>
   <string name="service_desc">Fenntartja az SSH kapcsolatokat és a betöltött nyilvános kulcsokat</string>
+  <string name="auth_agent_service_desc">ssh-agent szolgáltatás más Android Appokhoz a telefonon</string>
+  <string name="ssh_agent_permission_label">Tárolt SSH kulcsok használata</string>
+  <string name="ssh_agent_permission_desc">Engedélyezi az privát kulcsok használatát SSH tranzakciókhoz. NAGYON VESZÉLYES, ha kártékony alkalmazás is hozzáfér.</string> 
   <string name="title_hosts_list">Kiszolgálók</string>
   <string name="title_pubkey_list">Publikus kulcsok</string>
   <string name="title_port_forwards_list">Port átiránytások</string>
@@ -13,14 +16,14 @@
   <string name="menu_insert">Kiszolgáló hozzáadása</string>
   <string name="menu_delete">Kiszolgáló törlése</string>
   <string name="menu_preferences">Beállítások</string>
-  <string name="help_intro">Válaszon témakört az alábbiak közül egy adott téma részletes leírásához.</string>
+  <string name="help_intro">Válasszon témakört az alábbiak közül egy adott téma részletes leírásához.</string>
   <string name="help_about">A ConnectBot névjegye</string>
   <string name="help_keyboard">Billentyűzet</string>
-  <string name="pubkey_generate">Generálás</string>
-  <string name="pubkey_import">Importálás</string>
-  <string name="pubkey_delete">Kulcs törlése</string>
+  <string name="pubkey_generate">Kulcs generálása</string>
+  <string name="pubkey_import">Kulcs importálása</string>
+  <string name="pubkey_delete">Kulcs törlésee</string>
   <string name="pubkey_gather_entropy">Entrópia gyűjtés</string>
-  <string name="pubkey_touch_prompt">Érintse meg a dobozt a véletlenszerű generálásához: %1$d%% kész</string>
+  <string name="pubkey_touch_prompt">Érintse meg ezt a dobozt a véletlenszerűség gyűjtéséhez: %1$d%% kész</string>
   <string name="pubkey_touch_hint">A kulcs egyediségének biztosítása érdekében mozgassa ujját véletlenszerűen az alábbi dobozban.</string>
   <string name="pubkey_generating">"Kulcspár generálása&#8230;"</string>
   <string name="pubkey_copy_private">Privát kulcs másolása</string>
@@ -29,20 +32,20 @@
   <string name="pubkey_unknown_format">Ismeretlen formátum</string>
   <string name="pubkey_change_password">Jelszócsere</string>
   <string name="pubkey_list_pick">Kiválaszt /sdcard -ról</string>
-  <string name="pubkey_import_parse_problem">Probléma a privát kulcspár feldolgozása során</string>
+  <string name="pubkey_import_parse_problem">Probléma a privát kulcs feldolgozása során</string>
   <string name="pubkey_unlock">Kulcs feloldása</string>
   <string name="pubkey_failed_add">Hibás jelszó a \'%1$s\' kulcshoz. Sikertelen azonosítás.</string>
   <string name="pubkey_memory_load">Betöltés a memóriába</string>
   <string name="pubkey_memory_unload">Mermória ürítése</string>
   <string name="pubkey_load_on_start">Kulcs betöltése induláskor</string>
   <string name="pubkey_confirm_use">Jóváhagyás használat előtt</string>
-  <string name="portforward_list_empty">Nyomj Menu-t a port\nátirányításhoz.</string>
+  <string name="portforward_list_empty">Nyomjon Menu-t a port\nátirányításhoz.</string>
   <string name="portforward_edit">Port átirányítás módosítása</string>
   <string name="portforward_delete">Port átirányítás törlése</string>
   <string name="prompt_nickname">Becenév:</string>
   <string name="prompt_nickname_hint_pubkey">A munkahelyi kulcsom</string>
-  <string name="prompt_source_port">Helyi port:</string>
-  <string name="prompt_destination">Cél:</string>
+  <string name="prompt_source_port">Forrás port:</string>
+  <string name="prompt_destination">Cél port:</string>
   <string name="prompt_old_password">Régi jelszó:</string>
   <string name="prompt_password">Jelszó:</string>
   <string name="prompt_again">(újra)</string>
@@ -56,7 +59,7 @@
   <string name="prompt_host_disconnected">A kapcsolat megszakadt.\nBezárja a folyamatot?</string>
   <string name="prompt_continue_connecting">Biztosan folytatja a csatlakozást?</string>
   <string name="host_authenticity_warning">A \'%1$s\' kiszolgáló azonosítása sikertelen.</string>
-  <string name="host_fingerprint">A %1$s kulcs újlenyomata a(-z) %2$s</string>
+  <string name="host_fingerprint">A %1$s kulcs ujjlenyomata a(-z) %2$s</string>
   <string name="alert_passwords_do_not_match_msg">Nem egyezik a jelszó!</string>
   <string name="alert_wrong_password_msg">Hibás jelszó!</string>
   <string name="alert_key_corrupted_msg">Sérült privát kulcs!</string>
@@ -65,6 +68,7 @@
   <string name="button_change">Módosítás</string>
   <string name="button_generate">Kulcs generálása</string>
   <string name="button_resize">Átméretezés</string>
+  <string name="button_resize_reset">Alapértelmezett méret</string>
   <string name="alert_disconnect_msg">A kapcsolat megszakadt</string>
   <string name="msg_copyright">Minden jog fentartva © 2007&#8211;2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>
   <string name="pref_emulation_category">Terminál emulálás</string>
@@ -77,7 +81,9 @@
   <string name="pref_rotation_summary">Hogyan forduljon a kijelző a billentyűzet ki/becsukása során</string>
   <string name="pref_fullscreen_title">Teljes képernyő</string>
   <string name="pref_fullscreen_summary">Rejtett állapotsor a konzol használata során</string>
-  <string name="pref_memkeys_title">Kulcsok megörzése a memóriában</string>
+  <string name="pref_hide_actionbar_title">Műveleti mező elrejtése</string>
+  <string name="pref_hide_actionbar_summary">Nem jeleníti meg a műveleti mezőt a terminál ablakban.</string>
+  <string name="pref_memkeys_title">Kulcsok megőrzése a memóriában</string>
   <string name="pref_memkeys_summary">Tartsa nyitva a memóriában lévő kulcsokat amíg a háttérszolgáltatás meg nem szűnik</string>
   <string name="pref_update_title">Frissítés ellenőrzése</string>
   <string name="pref_update_summary">ConnectBot frissítés ellenőrzésének maximális gyakorisága</string>
@@ -99,11 +105,11 @@
   <string name="pref_bell_vibrate_title">Vibráljon csengetéskor</string>
   <string name="pref_bell_notification_title">Háttér figyelmeztetések</string>
   <string name="pref_bell_notification_summary">Küldjön értesítőt amikor a háttérben futó terminál csenget.</string>
-  <string name="list_keymode_right">A jobb oldali gombok használata</string>
+  <string name="list_keymode_right">A jobboldali gombok használata</string>
   <string name="list_keymode_left">A baloldali gombok használata</string>
   <string name="list_keymode_none">Tiltás</string>
   <string name="list_pubkeyids_none">Kulcsok használatának tiltása</string>
-  <string name="list_pubkeyids_any">Bármely nyilvános kulcs használata</string>
+  <string name="list_pubkeyids_any">Bármely kinyitott privátkulcs használata</string>
   <string name="list_update_daily">Naponta</string>
   <string name="list_update_weekly">Hetente</string>
   <string name="list_update_never">Soha</string>
@@ -140,6 +146,9 @@
   <string name="console_menu_portforwards">Port átirányítások</string>
   <string name="console_menu_resize">Méret kényszerítése</string>
   <string name="console_menu_urlscan">URL Keresés</string>
+  <string name="console_menu_screencapture">Képernyőkép készítése</string>
+  <string name="console_menu_download">Fájl letöltése</string>
+  <string name="console_menu_upload">Fájl feltöltése</string>
   <string name="button_yes">Igen</string>
   <string name="button_no">Nem</string>
   <string name="portforward_local">Helyi</string>
@@ -167,11 +176,12 @@
   <string name="list_rotation_land">Fekvő mód kényszerítése</string>
   <string name="list_rotation_port">Álló mód kényszerítése</string>
   <string name="list_rotation_auto">Automatikus</string>
+  <string name="list_camera_screen_capture">Képernyőkép készítése</string>
   <string name="list_camera_ctrlaspace">Ctrl+A majd Space</string>
   <string name="list_camera_ctrla">Ctrl+A</string>
   <string name="list_camera_esc">Esc</string>
   <string name="list_camera_esc_a">Esc+A</string>
-  <string name="list_camera_none">Semmit</string>
+  <string name="list_camera_none">Semmi</string>
   <string name="list_delkey_backspace">Backspace</string>
   <string name="list_delkey_del">Delete</string>
   <string name="delete_message">Biztosan törli a \'%1$s\'-t?</string>
@@ -180,8 +190,8 @@
   <string name="wizard_agree">Elfogad</string>
   <string name="wizard_next">Következő</string>
   <string name="wizard_back">Vissza</string>
-  <string name="terminal_no_hosts_connected">Nincs csatlakozva</string>
-  <string name="terminal_connecting">Csatlakozás %1$s:%2$d a %3$s protokollon</string>
+  <string name="terminal_no_hosts_connected">Nincs kiszolgáló csatlakozva</string>
+  <string name="terminal_connecting">Csatlakozás %1$s:%2$d-hoz a %3$s protokollon</string>
   <string name="terminal_sucess">Azonosított \'%1$s\' gépnév kulcsa: %2$s</string>
   <string name="terminal_failed">Távoli gép, kulcs azonosítása sikertelen.</string>
   <string name="terminal_using_s2c_algorithm">Szerver-kliens algoritmus: %1$s %2$s</string>
@@ -191,19 +201,16 @@
   <string name="terminal_auth_pass">Próbálkozás \'password\' azonosítással</string>
   <string name="terminal_auth_pass_fail">A \'password\' azonosítás sikertelen.</string>
   <string name="terminal_auth_pubkey_any">Próbálkozás \'publickey\' azonosítással, bármely memóriában található nyilvános kulccsal</string>
-  <string name="terminal_auth_pubkey_invalid">A nyilvános kulcs hibás, próbálja újra kiválasztani az állomás kezelőből</string>
+  <string name="terminal_auth_pubkey_invalid">A nyilvános kulcs hibás, próbálja újra kiválasztani a kiszolgáló kezelőből</string>
   <string name="terminal_auth_pubkey_specific">Próbálkozás \'publickey\' azonosítással, választott nyilvános kulccsal</string>
   <string name="terminal_auth_pubkey_fail">A \'%1$s\' kulccsal történt \'publickey\' azonosítás sikertelen.</string>
   <string name="terminal_auth_ki">Próbálkozás \'keyboard-interactive\' azonosítással</string>
   <string name="terminal_auth_ki_fail">\'keyboard-interactive\' azonosítás sikertelen</string>
   <string name="terminal_auth_fail">[A gépnév nem támogatja a \'password\' vagy \'keyboard-interactive\' azonosítást.]</string>
-  <string name="terminal_no_session">A munkamenet nem kezdhető el a gép beállítások miatt.</string>
+  <string name="terminal_no_session">A munkamenet nem kezdhető el a távoli kiszolgáló beállításai miatt.</string>
   <string name="terminal_enable_portfoward">Port átirányítás engedélyezése: %1$s</string>
-  <string name="local_shell_unavailable">Hiba! Nincs lokális shell ezen a telefonon.</string>
-  <string name="notification_text">%1$s a figyelmére szorul.</string>
-  <string name="upgrade">Új verzió</string>
-  <string name="upgrade_pos">Igen, frissítés</string>
-  <string name="upgrade_neg">Most nem</string>
+  <string name="local_shell_unavailable">Hiba! Nem elérhető a helyi shell ezen a telefonon.</string>
+  <string name="notification_text">%1$s a figyelmét kéri.</string>
   <string name="no">Nem</string>
   <string name="with_confirmation">Csak beleegyezéssel</string>
   <string name="yes">Igen</string>
@@ -214,4 +221,107 @@
   <string name="color_green">zöld</string>
   <string name="color_blue">kék</string>
   <string name="color_gray">szürke</string>
+  <string name="colors_fg">"Előtér":</string>
+  <string name="color_bg">"Háttér:"</string>
+  <string name="image_description_connected">"Csatlakoztatva."</string>
+  <string name="image_description_key_is_locked">"Billentyűzet lezárva."</string>
+  <string name="image_description_toggle_control_character">Vezérlőkarakter kapcsolása.</string>
+  <string name="image_description_send_escape_character">Escape karakter küldése.</string>
+  <string name="image_description_show_keyboard">Billentyűzet megjelenítése.</string>
+  <string name="image_description_line_input">Egysoros bevitel</string>
+  <string name="image_description_sym">Karakterválasztó ablak</string>
+  <string name="button_close">Bezárás</string>
+  <string name="pref_custom_keymap_title">Egyedi kiosztás</string>
+  <string name="pref_custom_keymap_summary">Egyedi kiosztás beállítása bizonyos billentyűkre támogatott készülékek esetén.</string>
+  <string name="pref_custom_keymap_disabled">kikapcsolva</string>
+  <string name="pref_default_size_category">Alapértelmezett méretezési értékek</string>
+  <string name="pref_default_font_size">Alapértelmezett betűméret</string>
+  <string name="pref_default_font_size_summary">Alapértelmezett induló betűméret (0 = Automatikus)</string>
+  <string name="pref_default_fsize_width">Alapértelmezett szélesség (kényszerített méret)</string>
+  <string name="pref_default_fsize_width_summary">Alapértelmezett képernyőszélesség oszlopokban mérve a kényszerített méretezéshez.</string>
+  <string name="pref_default_fsize_height">Alapértelmezett magasság (kényszerített méret)</string>
+  <string name="pref_default_fsize_height_summary">Alapértelmezett képernyőmagasság sorokban mérve a kényszerített méretezéshez.</string>
+  <string name="resize_error_title">Hiba az átméretezés során</string>
+  <string name="resize_error_width_height">A szélességnek és a magasságnak 0-nál nagyobbnak kell lennie.</string>
+  <string name="dia_resize_x">x</string>
+  <string name="pref_screen_capture_category">Képernyőmentés</string>
+  <string name="pref_screen_capture_folder">Képernyőmentés mappája</string>
+  <string name="pref_screen_capture_folder_summary">A mappa, ahova a lementett képernyőképek kerülnek.</string>
+  <string name="pref_screen_capture_popup">Képernyőmentés visszajelzés</string>
+  <string name="pref_screen_capture_popup_summary">Sikeres képernyőképmentés készítésekor felugró ablak.</string>
+  <string name="screen_capture">Képernyőmentés</string>
+  <string name="screenshot_success_title">Sikeres képernyőmentés</string>
+  <string name="screenshot_saved_as">A képernyőkép mentve:</string>
+  <string name="screenshot_error_title">Hiba a képernyőkép készítése közben!</string>
+  <string name="screenshot_not_saved_as">A képernyőképet nem sikerült menteni:</string>
+  <string name="pref_picker_string">Sym ablak tartalma</string>
+  <string name="pref_picker_string_summary">Karakterem sorozat a karakterválasztó ablakhoz</string>
+  <string name="pref_picker_keep_open">Sym ablak nyitva tartása</string>
+  <string name="pref_picker_keep_open_summary">Csak a Vissza gomb zárja be a karakterválasztó ablakot.</string>  
+  <string name="pref_file_transfer_category">Fájlátvitel</string>
+  <string name="pref_file_dialog_title">Fájl kijelölés</string>
+  <string name="pref_file_dialog_summary">Párbeszéd ablak fájlok és mappák kijelöléséhez</string>
+  <string name="pref_file_dialog_builtin">beépített</string>
+  <string name="error_starting_app">Hiba indításkor %1$s</string>
+  <string name="file_chooser_select_file">Válasszon fájlt %1$s</string>
+  <string name="for_download">letöltéshez</string>
+  <string name="for_upload">feltöltéshez</string>
+  <string name="for_key_import">kulcsimportáláshoz</string>  
+  <string name="location">Hely</string>
+  <string name="cant_read_folder">Nem olvasható a mappa.</string>
+  <string name="nnew">Új</string>
+  <string name="select">Válasszon</string>
+  <string name="file_name">Fájlnév:</string>
+  <string name="cancel">Mégsem</string>
+  <string name="save">Mentés</string>
+  <string name="new_file">Új fájl</string>
+  <string name="no_data">Nincs adat</string>
+  <string name="pref_download_folder">Letöltési mappa</string>
+  <string name="pref_download_folder_summary">Az a mappa, ahova a letöltött fájlok kerülnek</string>
+  <string name="pref_remote_upload_folder">Távoli feltöltési mappa</string>
+  <string name="pref_remote_upload_folder_summary">Az a távoli mappa, ahova a feltöltött fájlok kerülnek</string>
+  <string name="pref_upload_dest_prompt">Rákérdezés a távoli mappára</string>
+  <string name="pref_upload_dest_prompt_summary">Rákérdez arra a távoli mappára, ahova a fájl fel fog töltődni.</string>  
+  <string name="pref_background_file_transfer">Fájlátvitel a háttérben</string>
+  <string name="pref_background_file_transfer_summary">A fájlok fel- és letöltése a háttérben zajlik.</string>
+  <string name="transfer_downloading">Fájl letöltése&#8230;</string>
+  <string name="transfer_downloading_file">Fájl letöltése: %1$s</string>
+  <string name="transfer_download_complete">A fájl letöltése kész.</string>
+  <string name="transfer_download_failed">A fájl letöltése nem sikerült.</string>
+  <string name="transfer_select_remote_download_title">Fájl(ok) letöltése</string>
+  <string name="transfer_select_remote_download_desc">Adja meg a letöltendő fájlok elérési útvonalát (soronként egy fájl)</string>
+  <string name="transfer_select_remote_upload_dest_title">Feltöltési cél</string>
+  <string name="transfer_select_remote_upload_dest_desc">Adja meg a kívánt távoli fájlnevet:</string>  
+  <string name="transfer_button_download">Letöltés</string>
+  <string name="transfer_button_upload">Feltöltés</string>
+  <string name="transfer_uploading">Feltöltés&#8230;</string>
+  <string name="transfer_uploading_file">Fájl feltöltés: %1$s</string>
+  <string name="transfer_upload_complete">Fájlfeltöltés kész.</string>
+  <string name="transfer_upload_failed">Fájlfeltöltés nem sikerült.</string>
+  <string name="pubkey_export_private">Privát kulcs exportálása</string>
+  <string name="pubkey_export_public">"Publikus kulcs exportálása"</string>	
+  <string name="pubkey_public_save_as">Publikus kulcs mentése</string>
+  <string name="pubkey_public_save_as_desc">Fájlnév (teljes elérési útvonal), ahova a publikus kulcsot menteni szeretné.</string>
+  <string name="pubkey_private_save_as">Privát kulcs mentése</string>
+  <string name="pubkey_private_save_as_desc">Fájlnév (teljes elérési útvonal), ahova a privát kulcsot menteni szeretné.</string>
+  <string name="pubkey_public_export_success">A publikus kulcs exportálása sikeres.</string>
+  <string name="pubkey_public_export_problem">Hiba a publikus kulcs exportálása során.</string>
+  <string name="pubkey_private_export_success">A privát kulcs exportálása sikeres.</string>
+  <string name="pubkey_private_export_problem">Hiba a privát kulcs exportálása során.</string>  
+  <string name="pref_debug_category">Hibakeresési beállítások</string>
+  <string name="pref_debug_keycodes">Billentyűkódok kiírása</string>
+  <string name="pref_debug_keycodes_summary">A terminálablakban lenyomott billentyűk kódjait kiírja.</string>
+  <string name="keycode_presesed">A lenyomott billentyű kódja</string>
+  <string name="pref_extended_longpress">Bővített hosszan nyomva tartott menü</string>
+  <string name="pref_extended_longpress_summary">A beviteli párbeszédablakot mutatja érintés és tartás esetén.</string>
+  <string name="longpress_select_action">Válassza ki a műveletet</string>
+  <string name="longpress_enable_full_screen_mode">Teljes képernyős mód bekapcsolása</string>
+  <string name="longpress_disable_full_screen_mode">Teljes képernyős mód kikapcsolása</string>
+  <string name="longpress_change_font_size">Betűméret változtatása</string>
+  <string name="longpress_arrows_dialog">Nyilak</string>
+  <string name="longpress_fkeys_dialog">Funkcióbillentyűk</string>
+  <string name="longpress_ctrl_dialog">CTRL+?</string>
+  <string name="longpress_sym_dialog">Karakterválasztó</string>
+  <string name="pref_ctrl_string">CTRL ablak tartalma</string>
+  <string name="pref_ctrl_string_summary">Karakterek sorozata a CTRL+? kombinációkhoz.</string>
 </resources>
