Add first support for full hardware keyboards. Tested on external bluetooth keyboard.

--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -228,6 +228,7 @@
   <string name="button_close">Zavrieť</string>
   <string name="pref_custom_keymap_title">Prispôsobenie klávesnice</string>
   <string name="pref_custom_keymap_summary">Presmerovanie vybraných kláves na podporovaných zariadeniach</string>
+  <string name="pref_custom_keymap_full">plnohodnotná klávesnica</string>
   <string name="pref_custom_keymap_disabled">vypnuté</string>
   <string name="pref_default_size_category">Prednastavenia veľkosti</string>
   <string name="pref_default_font_size">Prednastavená veľkosť písma</string>
