--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -228,6 +228,7 @@
   <string name="button_close">Schließen</string>
   <string name="pref_custom_keymap_title">Angepasstes Tastaturlayout</string>
   <string name="pref_custom_keymap_summary">Umleitung von bestimmten Tasten auf unterstützten Geräten</string>
+  <string name="pref_custom_keymap_full">vollständige Tastatur</string>
   <string name="pref_custom_keymap_disabled">deaktiviert</string>
   <string name="pref_default_size_category">Voreinstellungen für Fenstergröße</string>
   <string name="pref_default_font_size">Standard-Schriftgröße</string>
