--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -79,8 +79,6 @@
   <string name="pref_ui_category">Felhasználói felület</string>
   <string name="pref_rotation_title">Forgatási mód</string>
   <string name="pref_rotation_summary">Hogyan forduljon a kijelző a billentyűzet ki/becsukása során</string>
-  <string name="pref_fullscreen_title">Teljes képernyő</string>
-  <string name="pref_fullscreen_summary">Rejtett állapotsor a konzol használata során</string>
   <string name="pref_memkeys_title">Kulcsok megőrzése a memóriában</string>
   <string name="pref_memkeys_summary">Tartsa nyitva a memóriában lévő kulcsokat amíg a háttérszolgáltatás meg nem szűnik</string>
   <string name="pref_update_title">Frissítés ellenőrzése</string>
@@ -322,4 +320,5 @@
   <string name="longpress_sym_dialog">Karakterválasztó</string>
   <string name="pref_ctrl_string">CTRL ablak tartalma</string>
   <string name="pref_ctrl_string_summary">Karakterek sorozata a CTRL+? kombinációkhoz.</string>
+  <string name="fullscreen">Teljes képernyő</string>
 </resources>
