--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -80,8 +80,6 @@
   <string name="pref_ui_category">Používateľské rozhranie</string>
   <string name="pref_rotation_title">Mód otáčania</string>
   <string name="pref_rotation_summary">Ako zmeniť rotáciu, keď sa zobrazí / skryje klávesnica</string>
-  <string name="pref_fullscreen_title">Celá obrazovka</string>
-  <string name="pref_fullscreen_summary">Spúšťať konzolu v režime celej obrazovky</string>
   <string name="pref_memkeys_title">Zapamätať kľúče v pamäti</string>
   <string name="pref_memkeys_summary">Ponechať odomknuté kľúče v pamäti pokiaľ nie je ukončená služba na pozadí.</string>
   <string name="pref_update_title">Kontrolovať aktualizácie</string>
@@ -319,4 +317,5 @@
   <string name="longpress_sym_dialog">Výber znaku</string>
   <string name="pref_ctrl_string">Obsah okna Ctrl</string>
   <string name="pref_ctrl_string_summary">Sada znakov na výber kombinácie CTRL+?</string>  
+  <string name="fullscreen">Celá obrazovka</string>
 </resources>
