Fix translations for camera, volup, voldn and search buttons

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -88,14 +88,14 @@
   <string name="pref_conn_persist_summary">Erhalte Verbindungen auch im Hintergrund</string>
   <string name="pref_keymode_title">Verzeichniskürzel</string>
   <string name="pref_keymode_summary">Einstellen, wie Alt für \'/\' und Hochstellen für \'Tab\' verwendet werden sollen</string>
-  <string name="pref_camera_title">Kamerakürzel</string>
-  <string name="pref_camera_summary">Welches Kürzel soll durch Drücken des Kamerauslösers aktiviert werden</string>
-	<string name="pref_volup_title">"Lauter-Kürzel"</string>
-  <string name="pref_volup_summary">Welches Kürzel soll durch Drücken der Lauter-Taste aktiviert werden</string>
-	<string name="pref_voldn_title">"Leiser-Kürzel"</string>
-  <string name="pref_voldn_summary">Welches Kürzel soll durch Drücken des Leiser-Taste aktiviert werden</string>
-	<string name="pref_search_title">"Suchtasten-Kürzel"</string>
-  <string name="pref_search_summary">Welches Kürzel soll durch Drücken der Suchtaste aktiviert werden</string>
+  <string name="pref_camera_title">Kamerataste</string>
+  <string name="pref_camera_summary">Aktion, die beim Drücken der Kamera-Taste ausgeführt wird</string>
+  <string name="pref_volup_title">Lauter-Taste</string>
+  <string name="pref_volup_summary">Aktion, die beim Drücken der Lauter-Taste ausgeführt wird</string>
+  <string name="pref_voldn_title">Leiser-Taste</string>
+  <string name="pref_voldn_summary">Aktion, die beim Drücken der Leiser-Taste ausgeführt wird</string>
+  <string name="pref_search_title">Suchtaste</string>
+  <string name="pref_search_summary">Aktion, die beim Drücken der Suchtaste ausgeführt wird</string>
   <string name="pref_keepalive_title">Bildschirm anlassen</string>
   <string name="pref_keepalive_summary">Verhindern, dass beim Arbeiten an der Konsole der Bildschirm abgeschaltet wird</string>
   <string name="pref_wifilock_title">WLAN aktiviert lassen</string>
