--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -186,21 +186,21 @@
 	<string name="pref_keymode_summary">"Select how to use Alt for '/' and Shift for Tab"</string>
 
 	<!-- Name for the camera shortcut usage preference -->
-	<string name="pref_camera_title">"Camera shortcut"</string>
+	<string name="pref_camera_title">"Camera button"</string>
 	<!-- Summary for the camera shortcut usage preference -->
-	<string name="pref_camera_summary">"Select which shortcut to trigger when the camera button is pushed"</string>
+	<string name="pref_camera_summary">"Action triggered by pressing the camera button"</string>
 
 	<!-- Name for the volup shortcut usage preference -->
-	<string name="pref_volup_title">"Volume up shortcut"</string>
-	<string name="pref_volup_summary">"Select which shortcut to trigger when the volume up button is pushed"</string>
+	<string name="pref_volup_title">"Volume up button"</string>
+	<string name="pref_volup_summary">"Action triggered by pressing the volume up button"</string>
 
 	<!-- Name for the volup shortcut usage preference -->
-	<string name="pref_voldn_title">"Volume down shortcut"</string>
-	<string name="pref_voldn_summary">"Select which shortcut to trigger when the volume down button is pushed"</string>
+	<string name="pref_voldn_title">"Volume down button"</string>
+	<string name="pref_voldn_summary">"Action triggered by pressing the volume down button"</string>
 
 	<!-- Name for the volup shortcut usage preference -->
-	<string name="pref_search_title">"Search button shortcut"</string>
-	<string name="pref_search_summary">"Select which shortcut to trigger when the search button is pushed"</string>
+	<string name="pref_search_title">"Search button"</string>
+	<string name="pref_search_summary">"Action triggered by pressing the search button"</string>
 
 	<!-- Name for the keep screen on preference -->
 	<string name="pref_keepalive_title">"Keep screen awake"</string>
