--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -527,7 +527,7 @@
 	<!--  Keyboard customization -->
 	<string name="pref_custom_keymap_title">Custom Keymap</string>
 	<string name="pref_custom_keymap_summary">Remapping of certain keys on supported devices</string>
-	<string name="pref_custom_keymal_full">Full hardware keyboard</string>
+	<string name="pref_custom_keymap_full">Full hardware keyboard</string>
 	<string name="pref_custom_keymap_disabled">disabled</string>
 
 	<!--  Force screen size -->
