--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -150,6 +150,7 @@
   <string name="console_menu_resize">Größe erzwingen</string>
   <string name="console_menu_urlscan">URL Scan</string>
   <string name="console_menu_screencapture">Bildschirmfoto</string>
+  <string name="console_menu_register_pubkey">Öffentlichen Schlüssel registrieren</string>
   <string name="console_menu_download">"Datei herunterladen"</string>
   <string name="console_menu_upload">"Datei hochladen"</string>
   <string name="button_yes">Ja</string>
@@ -306,7 +307,8 @@
   <string name="pubkey_public_export_success">Öffentlicher Schlüssel gespeichert als %1$s</string>
   <string name="pubkey_public_export_problem">Fehler beim Export des öffentlichen Schlüssels</string>
   <string name="pubkey_private_export_success">Privater Schlüssel gespeichert als %1$s</string>
-  <string name="pubkey_private_export_problem">Fehler beim Export des privaten Schlüssels</string>  
+  <string name="pubkey_private_export_problem">Fehler beim Export des privaten Schlüssels</string>
+  <string name="pubkey_public_not_available">Öffentlicher Schlüssel nicht verfügbar</string>
   <string name="pref_debug_category">Entwickler-Einstellungen</string>
   <string name="pref_debug_keycodes">Tastencodes anzeigen</string>
   <string name="pref_debug_keycodes_summary">Codes der im Terminal gedrückten Tasten anzeigen</string>
