--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -310,6 +310,21 @@
 	<!-- Port field title for host editor preference -->
 	<string name="hostpref_port_title">"Port"</string>
 
+	<!-- Host preference category title for x11 forwarding -->
+	<string name="hostpref_x11_forwarding">"X11 forwarding"</string>
+
+	<!-- Enable x11 forwarding checkbox title for host editor preference -->
+	<string name="hostpref_wantx11forward_title">"Enable X11 forwarding"</string>
+
+	<!-- Enable x11 forwarding checkbox summary for host editor preference -->
+	<string name="hostpref_wantx11forward_summary">"Forward X11 sessions to host and port specified below"</string>
+
+	<!-- Hostname field title for x11 forwarding in host editor preference -->
+	<string name="hostpref_x11host_title">"X11 forwarding host"</string>
+
+	<!-- Port field title for x11 forwarding in host editor preference -->
+	<string name="hostpref_x11port_title">"X11 forwarding port"</string>
+
 	<!-- Displayed to indicate a host has never been connected to. -->
 	<string name="bind_never">"Never connected"</string>
 	<!-- The time that has elapsed since a host was connected to when it has been less than an hour. -->
