--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -321,4 +321,20 @@
   <string name="pref_ctrl_string">CTRL ablak tartalma</string>
   <string name="pref_ctrl_string_summary">Karakterek sorozata a CTRL+? kombinációkhoz.</string>
   <string name="fullscreen">Teljes képernyő</string>
+	<string name="hostpref_wantsession_title">"Héj indítása"</string>
+	<string name="hostpref_wantsession_summary">"Kapcsoljuk ki, ha csak port átirányításra van szükségünk"</string>
+	<string name="hostpref_x11_forwarding">"X11 átirányítás"</string>
+	<string name="hostpref_wantx11forward_title">"X11 átirányítás bekapcsolása"</string>
+	<string name="hostpref_wantx11forward_summary">"X11 munkamenetek átirányítása a lentebb megadott kiszolgálóra és portra"</string>
+	<string name="list_hwbutton_ctrl">"CTRL"</string>
+	<string name="list_hwbutton_tab">"Tab"</string>
+	<string name="pref_custom_keymap_full">Teljes hardveres billentyűzet</string>
+	<string name="pref_fullscreen_title">"Teljes képernyő"</string>
+	<string name="pref_fullscreen_summary">"Terminál indítása teljes képernyőn"</string>
+	<string name="pref_search_title">"Keresés gomb"</string>
+	<string name="pref_search_summary">"A keresés gomb megnyomásakor végrehajtott művelet"</string>
+	<string name="pref_volup_title">"Hangerő fel gomb"</string>
+	<string name="pref_volup_summary">"A hangerő fel megnyomásakor végrehajtott művelet"</string>
+	<string name="pref_voldn_title">"Hangerő le gomb"</string>
+	<string name="pref_voldn_summary">"A hangerő le megnyomásakor végrehajtott művelet"</string>  
 </resources>
